# shinalysis

./: LICENSE  pyproject.toml
docs/: conf.py  index.rst  shinalysis.rst
docs/_build/doctrees/: environment.pickle  index.doctree  shinalysis.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  shinalysis.html
src/shinalysis/: __init__.py
