[project]
name = "shinalysis"
version = "0.1.1"
description = "This package contains functions that support basic calibration and analysis of interferograms produced using spatial heterodyne interferometers."
readme = "README.md"
authors = [
    { name = "Cole", email = "cmmeyer@arizona.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "sphinx>=8.1.3",
]

[project.scripts]
shinalysis = "shinalysis:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "sphinx-rtd-theme>=3.0.2",
]
